--- a/dashboard.html
+++ b/dashboard.html
@@ -2,10 +2,22 @@
 <html>
 <head>
     <title>User Dashboard</title>
+    <!-- Add Bootstrap CSS -->
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
-    <h1>User Dashboard</h1>
-    <ul id="userData"></ul>
+    <div class="container">
+        <h1>User Dashboard</h1>
+        <table class="table">
+            <thead>
+                <tr>
+                    <th>Username</th>
+                    <th>Password</th>
+                </tr>
+            </thead>
+            <tbody id="userData"></tbody>
+        </table>
+    </div>
 
     <script>
         var xhr = new XMLHttpRequest();
@@ -15,13 +27,18 @@
                 var users = JSON.parse(xhr.responseText);
                 var userDataElement = document.getElementById("userData");
                 users.forEach(function(user) {
-                    var li = document.createElement("li");
-                    li.textContent = "Username: " + user.username + ", Password: " + user.password;
-                    userDataElement.appendChild(li);
+                    var row = document.createElement("tr");
+                    row.innerHTML = "<td>" + user.username + "</td><td>" + user.password + "</td>";
+                    userDataElement.appendChild(row);
                 });
             }
         };
         xhr.send();
     </script>
+
+    <!-- Add Bootstrap JS and jQuery -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.0.7/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 </html>
